Finalize V2 plan: K8s alignment, remove hacks, concrete tests
- Add K8s familiarity table (kubectl → citeck command mapping)
- Add Phase 0: CLI renaming to match K8s conventions (describe, config view)
- Remove citeck deploy (folded into apply --force)
- Remove port-forward (fragile socat hack)
- Remove built-in config templating (use envsubst externally)
- Move reconciliation config from namespace.yml to daemon.yml
- Simplify secret management (local only, no Vault)
- Replace abstract test strategy with concrete test tables per phase
  (test class names, specific cases, integration test steps)
- Add failure injection test matrix
- Add full agent E2E test script